--- a/qtify/package.json
+++ b/qtify/package.json
@@ -2,6 +2,7 @@
   "name": "qtify",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/qtify",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
